--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 164 points<br>
+Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 169 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -53,6 +53,7 @@ Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
+<li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Goldsmith (Level 4)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
@@ -69,24 +70,24 @@ Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   2869 rev-parse
-   1209 symbolic-ref
+   2959 rev-parse
+   1254 symbolic-ref
     282 diff-index
-    266 log
-    174 diff
-    130 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    267 log
+    180 diff
+    136 --git-dir=/home/michiel/SNaP/snap-ramp/.git
     123 --git-dir=.git
-     86 st
-     63 checkout
-     54 achievements
+     92 st
+     66 checkout
+     55 achievements
      40 lola
      35 config
-     33 help
-     24 commit
+     34 help
+     25 commit
      23 lol
      22 add
-     16 rebase
-     16 difftool
+     17 rebase
+     17 difftool
      15 br
      14 stash
      12 merge
