--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 27/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 179 points<br>
+Unlocked 27/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 182 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -40,6 +40,7 @@ Unlocked 27/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Hunter (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
+<li><div class="title">Apprentice Investigator (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 9 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 23 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice News Reader (Level 1)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
@@ -72,32 +73,34 @@ Unlocked 27/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3047 rev-parse
-   1298 symbolic-ref
+   3209 rev-parse
+   1377 symbolic-ref
     282 diff-index
     274 log
-    181 diff
-    146 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    183 diff
+    163 --git-dir=/home/michiel/SNaP/snap-ramp/.git
     123 --git-dir=.git
-     95 st
-     75 checkout
-     55 achievements
-     40 lola
+    100 st
+     80 checkout
+     56 achievements
+     49 lola
+     35 help
      35 config
-     34 help
-     26 commit
+     27 commit
      23 lol
      23 add
-     19 rebase
-     17 difftool
-     16 stash
+     21 rebase
+     21 difftool
+     17 stash
      15 br
      12 merge
       8 gc
-      7 branch
+      8 branch
       6 fetch
+      5 status
       5 pull
-      4 status
+      4 describe
+      4 blame
       3 show
       3 push
       3 ls-remote
@@ -107,9 +110,7 @@ Git commands sorted by usage:
       2 show-branch
       2 revert
       2 reset
-      2 describe
       2 clean
-      2 blame
       2 bisect
       1 reflog
       1 ls-files
