--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 27/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 182 points<br>
+Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 184 points<br>
 <ul>
+<li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
@@ -73,22 +74,22 @@ Unlocked 27/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3209 rev-parse
-   1377 symbolic-ref
+   3357 rev-parse
+   1451 symbolic-ref
     282 diff-index
     274 log
     183 diff
     163 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    123 --git-dir=.git
-    100 st
-     80 checkout
+    130 --git-dir=.git
+    106 st
+     82 checkout
      56 achievements
-     49 lola
-     35 help
+     54 lola
+     36 help
      35 config
-     27 commit
+     29 commit
+     24 add
      23 lol
-     23 add
      21 rebase
      21 difftool
      17 stash
@@ -97,19 +98,20 @@ Git commands sorted by usage:
       8 gc
       8 branch
       6 fetch
+      6 bundle
       5 status
       5 pull
+      5 blame
       4 describe
-      4 blame
       3 show
       3 push
       3 ls-remote
-      3 bundle
       2 whatchanged
       2 tag
       2 show-branch
       2 revert
       2 reset
+      2 format-patch
       2 clean
       2 bisect
       1 reflog
@@ -130,7 +132,6 @@ function showLocked() {
 There are 50 Achievements. Some achievements can be leveled up depending on the number of times it is used (Used 2 times = level 1, 4 = level 2, 8 = level 3, 16 = level 4, 32 = level 5, etc)
 <ul>
 <li><div class="title">Architect</div><div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
-<li><div class="title">Archivist</div><div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Beach Lion</div><div class="info">Restricted login shell for GIT-only SSH access with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-shell.html">git-shell</a></div></li>
 <li><div class="title">Carpenter</div><div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Cathedral Architect</div><div class="info">Added a submodule to a repository.</div></li>
