--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 184 points<br>
+Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 190 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -69,43 +69,46 @@ Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 <li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3369 rev-parse
-   1457 symbolic-ref
+   3769 rev-parse
+   1657 symbolic-ref
     282 diff-index
     274 log
-    183 diff
-    163 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    133 --git-dir=.git
-    106 st
-     83 checkout
-     57 achievements
-     55 lola
-     36 help
-     35 config
-     29 commit
-     24 add
+    189 diff
+    174 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    138 --git-dir=.git
+    113 st
+     86 checkout
+     60 lola
+     58 achievements
+     41 help
+     37 config
+     30 commit
+     27 add
+     24 difftool
+     23 rebase
      23 lol
-     21 rebase
-     21 difftool
-     17 stash
-     15 br
+     20 br
+     19 stash
      12 merge
+      9 branch
       8 gc
-      8 branch
       6 fetch
       6 bundle
       5 status
       5 pull
       5 blame
+      4 ls-remote
       4 describe
+      4 clone
       3 show
       3 push
-      3 ls-remote
+      3 --git-dir=
       2 whatchanged
       2 tag
       2 show-branch
@@ -114,12 +117,11 @@ Git commands sorted by usage:
       2 format-patch
       2 clean
       2 bisect
+      1 remote
       1 reflog
       1 ls-files
       1 init
       1 --help
-      1 --git-dir=
-      1 clone
       1 am
 </pre>
 <script type="text/javascript">
