--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 190 points<br>
+Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 194 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -21,6 +21,7 @@ Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Banker (Level 3)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Apprentice Blacksmith (Level 3)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Butcher (Level 2)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Butcher (Level 3)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
@@ -75,27 +76,27 @@ Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3769 rev-parse
-   1657 symbolic-ref
+   3875 rev-parse
+   1710 symbolic-ref
     282 diff-index
     274 log
-    189 diff
-    174 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    194 diff
+    188 --git-dir=/home/michiel/SNaP/snap-ramp/.git
     138 --git-dir=.git
-    113 st
-     86 checkout
-     60 lola
+    126 st
+     92 checkout
+     62 lola
      58 achievements
      41 help
      37 config
-     30 commit
-     27 add
+     31 commit
+     28 add
+     26 stash
+     24 lol
      24 difftool
      23 rebase
-     23 lol
-     20 br
-     19 stash
-     12 merge
+     23 br
+     13 merge
       9 branch
       8 gc
       6 fetch
@@ -106,11 +107,11 @@ Git commands sorted by usage:
       4 ls-remote
       4 describe
       4 clone
+      3 tag
       3 show
       3 push
       3 --git-dir=
       2 whatchanged
-      2 tag
       2 show-branch
       2 revert
       2 reset
