--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 194 points<br>
+Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 200 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -69,6 +69,7 @@ Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
@@ -76,27 +77,27 @@ Unlocked 28/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3875 rev-parse
-   1710 symbolic-ref
+   3899 rev-parse
+   1722 symbolic-ref
     282 diff-index
     274 log
-    194 diff
-    188 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    195 diff
+    191 --git-dir=/home/michiel/SNaP/snap-ramp/.git
     138 --git-dir=.git
     126 st
-     92 checkout
-     62 lola
+     93 checkout
+     64 lola
      58 achievements
      41 help
      37 config
-     31 commit
+     32 commit
+     31 stash
      28 add
-     26 stash
      24 lol
      24 difftool
      23 rebase
      23 br
-     13 merge
+     14 merge
       9 branch
       8 gc
       6 fetch
