--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 205 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 209 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -43,6 +43,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Hunter (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Investigator (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
+<li><div class="title">Apprentice Investigator (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 9 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 23 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice News Reader (Level 1)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
@@ -79,39 +80,39 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3985 rev-parse
-   1755 symbolic-ref
+   4049 rev-parse
+   1787 symbolic-ref
     282 diff-index
     274 log
-    203 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    195 diff
+    214 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    196 diff
     138 --git-dir=.git
-    131 st
-     98 checkout
-     69 lola
-     58 achievements
-     41 help
+    134 st
+     99 checkout
+     74 lola
+     59 achievements
+     42 help
      37 config
      34 commit
      31 stash
      30 add
      26 lol
      25 rebase
+     25 br
      24 difftool
-     24 br
      14 merge
      10 branch
       9 ls-remote
       8 gc
+      8 blame
       6 pull
       6 fetch
       6 bundle
       5 status
-      5 blame
+      4 tag
       4 push
       4 describe
       4 clone
-      3 tag
       3 show
       3 --git-dir=
       2 whatchanged
@@ -121,12 +122,12 @@ Git commands sorted by usage:
       2 format-patch
       2 clean
       2 bisect
+      2 am
       1 remote
       1 reflog
       1 ls-files
       1 init
       1 --help
-      1 am
 </pre>
 <script type="text/javascript">
 function showLocked() {
